# youtube-video-dubbing

./: .gitignore  README.md  pyproject.toml
custom_dubber/: audio_processing.py  ffmpeg.py  main.py  pydub_audio_segment.py  text_to_speech.py  text_to_speech_gemini.py  translation_gemini.py  utils.py  video_downloader.py  video_processing.py  youtube_to_text.py
